--- a/Spring02_Controller/src/main/resources/static/index.html
+++ b/Spring02_Controller/src/main/resources/static/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>/static/index.html</title>
+<link rel="stylesheet" href="/spring02/css/custom.css" />
 </head>
 <body>
 	<div class="container">
@@ -21,6 +22,26 @@
 			<input type="text" name="msg" placeholder="할말 입력"/>
 			<button type="submit">전송</button>
 		</form>
+		
+		<form action="/spring02/send3" method="post">
+			<input type="text" name="num" placeholder="번호 입력..."/>
+			<br />
+			<input type="text" name="name" placeholder="이름 입력..."/>
+			<br />
+			<input type="text" name="addr" placeholder="주소 입력..."/>
+			<br />
+			<button type="submit">전송</button>
+		</form>
+		
+		<form action="/spring02/send4" method="post">
+			<input type="text" name="num" placeholder="번호 입력..."/>
+			<br />
+			<input type="text" name="name" placeholder="이름 입력..."/>
+			<br />
+			<input type="text" name="addr" placeholder="주소 입력..."/>
+			<br />
+			<button type="submit">전송</button>
+		</form>		
 	</div>
 </body>
 </html>
